feat: reset css 및 meta data 세팅

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+  <meta name="description" content="칼퇴요정은 근무 종료 시간을 추적하고 퇴근 시간이 되면 알림을 주는 데스크탑 앱입니다." />
 
-	<title>Svelte app</title>
+	<title>🧚🏻‍♀️ 칼퇴 요정</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/reset.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
